# virtual-biotech-agents

./: .env.example  .gitignore  .mcp.json  README.md  cited.md  cited.payment.json  publish_cited.py  pyproject.toml
docs/: PROJECT.md  SPONSORS.md  agentic-hypothesis-optimization.md  agentic-workflow-ideas.md  ai-scientist-landscape-review.md  deferred-skills.md  evidence-gap-analysis.md  expert-gaps-review.md  kg-pareto-provenance-design.md  loom-script-3min.md  loom-slides.md  prometheux-evidence-graph-applicability.md  target-arena-research.md
frontend/: README.md  app.js  app.jsx  build.py  data.js  index.html  kg.py  server.py  x402.py
frontend/assets/: gen.py
frontend/site/: index.html  schematic.html
frontend/tests/: test_hitl.py
skills/celltype-specificity-profiler/: SKILL.md
skills/cellxgene-fetch/: SKILL.md  cellxgene_fetch.py
skills/cellxgene-fetch/examples/: expected_demo_result.json
skills/cellxgene-fetch/tests/: test_cellxgene_fetch.py
skills/clinical-trial-finder/: SKILL.md  clinical_trial_finder.py
skills/dataset-projection/: .gitignore  README.md  bind.vada  facts.py  mcp_server.py  run_decision_live.py  run_live.py  to_cso.py
skills/dataset-projection/examples/: abstracts.sample.jsonl
skills/dataset-projection/extractors/: literature_claims.py  pbmc3k_expression.py  run_decision.py
skills/lit-synthesizer/: SKILL.md  lit_synthesizer.py
skills/lit-synthesizer/tests/: test_lit_synthesizer.py
skills/malignant-expression-profiler/: SKILL.md  malignant_expression_profiler.py
skills/malignant-expression-profiler/examples/: expected_demo_profile.json
skills/malignant-expression-profiler/tests/: test_malignant_expression_profiler.py
skills/openfda-safety/: SKILL.md  openfda_safety.py
skills/openfda-safety/examples/: expected_demo_safety.json
skills/openfda-safety/tests/: test_openfda_safety.py
skills/opentargets-association-evidence/: SKILL.md  opentargets_association_evidence.py
skills/opentargets-association-evidence/examples/: expected_demo_association.json
skills/opentargets-target-factors/: SKILL.md  opentargets_target_factors.py
skills/tcga-somatic-profiler/: SKILL.md  tcga_somatic_profiler.py
skills/virtual-biotech-cso/: SKILL.md  cso.py  harness.py  kg.py  primekg_enrich.py  prometheux_reason.py  routing.yaml  runners.py  tracing.py
skills/virtual-biotech-cso/tests/: test_cso.py  (+2 more)
tests/: test_prometheux_reason.py
workflows/: b7h3_adc_nomination.md
(+7 files in other folders)
